--- a/hps/heating_maintain_charge_record_all.jrxml
+++ b/hps/heating_maintain_charge_record_all.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!-- Created with Jaspersoft Studio version 5.6.2.final using JasperReports Library version 5.6.1  -->
-<!-- 2015-06-04T21:47:47 -->
-<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="heating_maintain_charge_record_all" printOrder="Horizontal" pageWidth="820" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="800" leftMargin="20" rightMargin="0" topMargin="0" bottomMargin="0" isIgnorePagination="true" uuid="fc97a963-c0b6-4c19-a348-7e2773e092a3">
+<!-- 2015-06-06T08:59:54 -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="heating_maintain_charge_record_all" printOrder="Horizontal" pageWidth="950" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="930" leftMargin="20" rightMargin="0" topMargin="0" bottomMargin="0" isIgnorePagination="true" uuid="fc97a963-c0b6-4c19-a348-7e2773e092a3">
 	<property name="template.engine" value="tabular_template"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="hpsDB"/>
 	<property name="com.jaspersoft.studio.unit." value="pixel"/>
@@ -90,6 +90,8 @@
 		<parameter name="charge_record_remark" class="java.lang.String"/>
 		<parameter name="oper_name" class="java.lang.String"/>
 		<parameter name="wage_num" class="java.lang.String"/>
+		<parameter name="charge_start_date" class="java.lang.String"/>
+		<parameter name="charge_end_date" class="java.lang.String"/>
 		<queryString language="SQL">
 			<![CDATA[select round(@mycnt := @mycnt + 1) as row_no,
     records.*
@@ -108,7 +110,8 @@ from
         round(record.must_charge, 2) must_charge,
         round(record.actual_charge, 2) actual_charge,
         (case record.charge_state when 0 then '已缴费' when 1 then '未缴费' when 2 then '已取消' else '未缴费' end) charge_state,
-        if (app_user.first_name is null, '', app_user.first_name) oper_name
+        if (app_user.first_name is null, '', app_user.first_name) oper_name,
+        DATE_FORMAT(record.charge_date, '%Y-%m-%d %H:%i:%s') charge_date
       from (hps.hps_heating_maintain_charge_record_2015 record
       	left outer join (select a.id, b.first_name from hps.hps_user a, 
    hps.app_user b where a.app_user_id = b.id) app_user on (record.oper_user_id = app_user.id),
@@ -134,6 +137,8 @@ from
            and (record.remarks like concat('%', $P{charge_record_remark}, '%') or $P{charge_record_remark} is null)
            and (owner.wage_num like concat('%', $P{wage_num}, '%') or $P{wage_num} is null)
            and (owner.name like concat('%', $P{owner_name}, '%') or $P{owner_name} is null )
+           and (DATE_FORMAT(record.charge_date, '%Y-%m-%d %T') >= $P{charge_start_date} or $P{charge_start_date}  is null)
+           and (DATE_FORMAT(record.charge_date, '%Y-%m-%d %T') <= $P{charge_end_date} or $P{charge_end_date} is null)
     order by area_name, louzuo_name, danyuan, ceng, door_no) records, (select (@mycnt := 0)) num_table]]>
 		</queryString>
 		<field name="row_no" class="java.lang.Double"/>
@@ -164,6 +169,7 @@ from
 		<field name="charge_state" class="java.lang.String">
 			<fieldDescription><![CDATA[]]></fieldDescription>
 		</field>
+		<field name="charge_date" class="java.lang.String"/>
 	</subDataset>
 	<parameter name="paymentdate_id" class="java.lang.Long"/>
 	<parameter name="charge_date" class="java.lang.String"/>
@@ -177,6 +183,8 @@ from
 	<parameter name="charge_record_remark" class="java.lang.String"/>
 	<parameter name="oper_name" class="java.lang.String"/>
 	<parameter name="wage_num" class="java.lang.String"/>
+	<parameter name="charge_start_date" class="java.lang.String"/>
+	<parameter name="charge_end_date" class="java.lang.String"/>
 	<queryString language="SQL">
 		<![CDATA[SELECT title FROM hps.hps_heating_maintain_payment_date_2015 where id = $P{paymentdate_id}]]>
 	</queryString>
@@ -200,22 +208,29 @@ from
 		<band height="200" splitType="Stretch">
 			<property name="local_mesure_unitheight" value="pixel"/>
 			<componentElement>
-				<reportElement isPrintRepeatedValues="false" x="0" y="0" width="780" height="200" uuid="8d760d56-373d-4bae-858c-70127ed8fde0">
+				<reportElement isPrintRepeatedValues="false" x="0" y="0" width="910" height="200" uuid="8d760d56-373d-4bae-858c-70127ed8fde0">
 					<property name="local_mesure_unitwidth" value="pixel"/>
+					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 				<jr:table xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd">
-					<datasetRun subDataset="tableDataset" uuid="4945cfd0-a768-48b8-a763-2525e603ceb0">
-						<datasetParameter name="paymentdate_id">
-							<datasetParameterExpression><![CDATA[$P{paymentdate_id}]]></datasetParameterExpression>
+					<datasetRun subDataset="tableDataset" uuid="2368e44c-9f82-4b2a-a0fd-3a63eccb80a0">
+						<datasetParameter name="area_code">
+							<datasetParameterExpression><![CDATA[$P{area_code}]]></datasetParameterExpression>
+						</datasetParameter>
+						<datasetParameter name="ceng">
+							<datasetParameterExpression><![CDATA[$P{ceng}]]></datasetParameterExpression>
 						</datasetParameter>
 						<datasetParameter name="charge_date">
 							<datasetParameterExpression><![CDATA[$P{charge_date}]]></datasetParameterExpression>
 						</datasetParameter>
-						<datasetParameter name="area_code">
-							<datasetParameterExpression><![CDATA[$P{area_code}]]></datasetParameterExpression>
+						<datasetParameter name="charge_record_remark">
+							<datasetParameterExpression><![CDATA[$P{charge_record_remark}]]></datasetParameterExpression>
 						</datasetParameter>
-						<datasetParameter name="owner_name">
-							<datasetParameterExpression><![CDATA[$P{owner_name}]]></datasetParameterExpression>
+						<datasetParameter name="charge_state">
+							<datasetParameterExpression><![CDATA[$P{charge_state}]]></datasetParameterExpression>
+						</datasetParameter>
+						<datasetParameter name="danyuan">
+							<datasetParameterExpression><![CDATA[$P{danyuan}]]></datasetParameterExpression>
 						</datasetParameter>
 						<datasetParameter name="house_no">
 							<datasetParameterExpression><![CDATA[$P{house_no}]]></datasetParameterExpression>
@@ -223,23 +238,23 @@ from
 						<datasetParameter name="louzuo">
 							<datasetParameterExpression><![CDATA[$P{louzuo}]]></datasetParameterExpression>
 						</datasetParameter>
-						<datasetParameter name="danyuan">
-							<datasetParameterExpression><![CDATA[$P{danyuan}]]></datasetParameterExpression>
-						</datasetParameter>
-						<datasetParameter name="ceng">
-							<datasetParameterExpression><![CDATA[$P{ceng}]]></datasetParameterExpression>
-						</datasetParameter>
-						<datasetParameter name="charge_state">
-							<datasetParameterExpression><![CDATA[$P{charge_state}]]></datasetParameterExpression>
-						</datasetParameter>
-						<datasetParameter name="charge_record_remark">
-							<datasetParameterExpression><![CDATA[$P{charge_record_remark}]]></datasetParameterExpression>
-						</datasetParameter>
 						<datasetParameter name="oper_name">
 							<datasetParameterExpression><![CDATA[$P{oper_name}]]></datasetParameterExpression>
 						</datasetParameter>
+						<datasetParameter name="owner_name">
+							<datasetParameterExpression><![CDATA[$P{owner_name}]]></datasetParameterExpression>
+						</datasetParameter>
+						<datasetParameter name="paymentdate_id">
+							<datasetParameterExpression><![CDATA[$P{paymentdate_id}]]></datasetParameterExpression>
+						</datasetParameter>
 						<datasetParameter name="wage_num">
 							<datasetParameterExpression><![CDATA[$P{wage_num}]]></datasetParameterExpression>
+						</datasetParameter>
+						<datasetParameter name="charge_start_date">
+							<datasetParameterExpression><![CDATA[$P{charge_start_date}]]></datasetParameterExpression>
+						</datasetParameter>
+						<datasetParameter name="charge_end_date">
+							<datasetParameterExpression><![CDATA[$P{charge_end_date}]]></datasetParameterExpression>
 						</datasetParameter>
 						<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 					</datasetRun>
@@ -573,11 +588,11 @@ from
 							</textField>
 						</jr:detailCell>
 					</jr:column>
-					<jr:column width="80" uuid="fe2d0fea-0c44-45bd-8ac9-908ea2914034">
+					<jr:column width="70" uuid="fe2d0fea-0c44-45bd-8ac9-908ea2914034">
 						<property name="local_mesure_unitwidth" value="pixel"/>
 						<jr:columnHeader style="Table_CH" height="20">
 							<staticText>
-								<reportElement style="Table_CH" x="0" y="0" width="80" height="20" uuid="641f0643-035f-41de-a700-c1cdae23094d">
+								<reportElement style="Table_CH" x="0" y="0" width="70" height="20" uuid="641f0643-035f-41de-a700-c1cdae23094d">
 									<property name="com.jaspersoft.studio.unit.height" value="px"/>
 								</reportElement>
 								<box leftPadding="2"/>
@@ -589,7 +604,7 @@ from
 						</jr:columnHeader>
 						<jr:detailCell style="Table_TD" height="20">
 							<textField>
-								<reportElement style="Table_TD" x="0" y="0" width="80" height="20" uuid="8a2bdf4c-3cc5-4b5e-9328-c8d218e23cae">
+								<reportElement style="Table_TD" x="0" y="0" width="70" height="20" uuid="8a2bdf4c-3cc5-4b5e-9328-c8d218e23cae">
 									<property name="com.jaspersoft.studio.unit.height" value="px"/>
 								</reportElement>
 								<box leftPadding="2"/>
@@ -597,6 +612,33 @@ from
 									<font fontName="DejaVu Sans" size="12"/>
 								</textElement>
 								<textFieldExpression><![CDATA[$F{charge_state}]]></textFieldExpression>
+							</textField>
+						</jr:detailCell>
+					</jr:column>
+					<jr:column width="140" uuid="44e9710e-6602-4e6a-a46d-347e57e021dd">
+						<property name="local_mesure_unitwidth" value="pixel"/>
+						<jr:columnHeader style="Table_CH" height="20">
+							<staticText>
+								<reportElement style="Table_CH" x="0" y="0" width="140" height="20" uuid="96c0fb72-fefa-4e5e-9ae8-af64c21c2b36">
+									<property name="com.jaspersoft.studio.unit.height" value="px"/>
+								</reportElement>
+								<box leftPadding="2"/>
+								<textElement>
+									<font fontName="DejaVu Sans" size="12" isBold="true"/>
+								</textElement>
+								<text><![CDATA[缴费时间]]></text>
+							</staticText>
+						</jr:columnHeader>
+						<jr:detailCell style="Table_TD" height="20">
+							<textField>
+								<reportElement style="Table_TD" x="0" y="0" width="140" height="20" uuid="f1b0e8db-2403-4d98-821c-761b16beb217">
+									<property name="com.jaspersoft.studio.unit.height" value="px"/>
+								</reportElement>
+								<box leftPadding="2"/>
+								<textElement>
+									<font fontName="DejaVu Sans" size="12"/>
+								</textElement>
+								<textFieldExpression><![CDATA[$F{charge_date}]]></textFieldExpression>
 							</textField>
 						</jr:detailCell>
 					</jr:column>
