--- a/hps/maintain_charge_record_final.jrxml
+++ b/hps/maintain_charge_record_final.jrxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!-- Created with Jaspersoft Studio version 5.6.2.final using JasperReports Library version 5.6.1  -->
-<!-- 2014-11-15T09:30:30 -->
+<!-- Created with Jaspersoft Studio version 6.6.0.final using JasperReports Library version 6.6.0  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="maintain_charge_record_final" printOrder="Horizontal" pageWidth="800" pageHeight="842" whenNoDataType="AllSectionsNoDetail" columnWidth="780" leftMargin="20" rightMargin="0" topMargin="0" bottomMargin="0" isIgnorePagination="true" uuid="fc97a963-c0b6-4c19-a348-7e2773e092a3">
 	<property name="template.engine" value="tabular_template"/>
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="hpsDB"/>
@@ -31,7 +30,7 @@
 			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="Table_CH" mode="Opaque" backcolor="#EFEFEF" hAlign="Center" vAlign="Middle">
+	<style name="Table_CH" mode="Opaque" backcolor="#EFEFEF" hTextAlign="Center" hImageAlign="Center" vTextAlign="Middle" vImageAlign="Middle">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 			<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -40,7 +39,7 @@
 			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="Table_TD" mode="Opaque" backcolor="#FFFFFF" hAlign="Center" vAlign="Middle">
+	<style name="Table_TD" mode="Opaque" backcolor="#FFFFFF" hTextAlign="Center" hImageAlign="Center" vTextAlign="Middle" vImageAlign="Middle">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 			<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -49,7 +48,7 @@
 			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="Table_TD_Integer" mode="Opaque" backcolor="#FFFFFF" hAlign="Right" vAlign="Middle" pattern="#,###.###;(#,###.###-)">
+	<style name="Table_TD_Integer" mode="Opaque" backcolor="#FFFFFF" hTextAlign="Right" hImageAlign="Right" vTextAlign="Middle" vImageAlign="Middle" pattern="#,###.###;(#,###.###-)">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 			<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -58,7 +57,7 @@
 			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="Table_TD_Double" mode="Opaque" backcolor="#FFFFFF" hAlign="Right" vAlign="Middle" pattern="#,##0.00#;(#,##0.00#-)">
+	<style name="Table_TD_Double" mode="Opaque" backcolor="#FFFFFF" hTextAlign="Right" hImageAlign="Right" vTextAlign="Middle" vImageAlign="Middle" pattern="#,##0.00#;(#,##0.00#-)">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 			<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -67,7 +66,7 @@
 			<rightPen lineWidth="0.5" lineColor="#000000"/>
 		</box>
 	</style>
-	<style name="Table_TD_Percent" mode="Opaque" backcolor="#FFFFFF" hAlign="Right" vAlign="Middle" pattern="###0.##%">
+	<style name="Table_TD_Percent" mode="Opaque" backcolor="#FFFFFF" hTextAlign="Right" hImageAlign="Right" vTextAlign="Middle" vImageAlign="Middle" pattern="###0.##%">
 		<box>
 			<pen lineWidth="0.5" lineColor="#000000"/>
 			<topPen lineWidth="0.5" lineColor="#000000"/>
@@ -125,6 +124,7 @@ from
            and (DATE_FORMAT(record.charge_date, '%Y-%m-%d') <= $P{charge_end_date} or $P{charge_end_date} is null)
            and paymentdate.id = $P{paymentdate_id}
            and (oper.id = $P{oper_id} or $P{oper_id} is null)
+           and record.charge_state = 0
     order by area_name, louzuo_name, danyuan, ceng, door_no) records, (select (@mycnt := 0)) num_table]]>
 		</queryString>
 		<field name="row_no" class="java.lang.Double"/>
